k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fluxo-caixa
  labels:
    name: fluxo-caixa
    environment: homelab
    project: database-migration
